# cpp_learning

spider/: CMakeLists.txt  README.md  main.cpp
spider/downloader/filter/: image_filter.cpp  image_filter.h
spider/downloader/storage/: file_storage.cpp  file_storage.h
spider/include/spider/: downloader.h  filter.h  spider.h  storage.h
spider/utils/: file.cpp  file.h  file_test.cpp  testharness.cpp  testharness.h
